tests/compile_fail/invalid_font_weight_number_literal.rs
use surgeist_style::FontWeightNumber;

fn main() {
    let _weight = FontWeightNumber(400);
}
